@@ -271,6 +271,7 @@ where XXXXXX is the bug number as listed below.
 349941  di_notify_mmap might create wrong start/size DebugInfoMapping
 350809  Fix none/tests/async-sigs for Solaris
 350811  Remove reference to --db-attach which has been removed.
+350813  Use handwritten memcheck assembly helpers on x86/Solaris in addition to {arm,x86}-linux
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
